# digital-rgb-led-universal-controller

./: CMakeLists.txt  DEPENDENCIES.md  Picopixel.h  README.md  clear_build_dir.py  digital-rgb-led-universal-controller.ino  platformio.ini
ai-guidelines/: fastled.md  original-one-file-app-reference.ino
boards-used/: esp32-c3-oled-supermini.md
exclude-bucket/: VisualLayers.cpp
src/: main.cpp
src/animations/: AnimationBase.h  AnimationManager.cpp  AnimationManager.h  CrazyAnimations.h  HighBpmAnimations.h  IntenseAnimations.h  PartyVibeAnimations.h  PsychedelicAnimations.h  SlowAndSoothingAnimations.h  SolidColorAnimations.h  TrialRunAnimations.h  _Fastled-animation-guidelines.md
src/animations/instructions/: _Fastled-animation-guidelines.md  ai-fastled-guide.md
src/animations/themes/: AutoShufflePlaceholder.cpp  CrazyAnimations.cpp  HighBpmAnimations.cpp  IntenseAnimations.cpp  PartyVibeAnimations.cpp  PsychedelicAnimations.cpp  SlowAndSoothingAnimations.cpp  SolidColorAnimations.cpp
src/config/: Config.h  PinConfig.h
src/controls/: InputManager.cpp  InputManager.h
src/display/: OLEDManager.cpp  OLEDManager.h  u8g2-screen-guidelines.md
src/system/: SystemManager.cpp  SystemManager.h
